Blender quits on undo/redo after changing object color #40046

Closed
opened 2014-05-06 13:42:21 +02:00 by Willi · 13 comments

System Information
Win7/64, AMD HD6850

Blender Version

blender-2.70-c6d8540-win64: works
blender-2.70-9de24c8-win64: broken
2.70a official: works
blender-2.70-6e9c2d0-win64: broken
...
blender-2.70-362b25b3-win64: broken

Short description of error
Blender quits on undo/redo after changing object color

Exact steps for others to reproduce the error

  • Open UndoRedo.blend
  • Change the object color (object properties, "Display" section)

Undo (Ctrl+Z). => Blender quits without a message. I've made several tests, and normally it quits immediatelly, but sometimes you have to press Undo,Redo,Undo,Redo,... several times to make it quit.

Please note which versions mentioned above crash/work: Broken with nightly, then works with official, then broken again.

Crash log: UndoRedo.crash.txt

**System Information** Win7/64, AMD HD6850 **Blender Version** blender-2.70-c6d8540-win64: works blender-2.70-9de24c8-win64: broken 2.70a official: works blender-2.70-6e9c2d0-win64: broken ... blender-2.70-362b25b3-win64: broken **Short description of error** Blender quits on undo/redo after changing object color **Exact steps for others to reproduce the error** - Open [UndoRedo.blend](https://archive.blender.org/developer/F87234/UndoRedo.blend) - Change the object color (object properties, "Display" section) # Undo (Ctrl+Z). => Blender quits without a message. I've made several tests, and normally it quits immediatelly, but sometimes you have to press Undo,Redo,Undo,Redo,... several times to make it quit. Please note which versions mentioned above crash/work: Broken with nightly, then works with official, then broken again. Crash log: [UndoRedo.crash.txt](https://archive.blender.org/developer/F87235/UndoRedo.crash.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm that on Linux64 with recent builds, neither release nor debug+asan, neither with your file nor with default cube…

Cannot confirm that on Linux64 with recent builds, neither release nor debug+asan, neither with your file nor with default cube…

Assuming this is a windows issue for now? Can someone on this platform try to reproduce?

Assuming this is a windows issue for now? Can someone on this platform try to reproduce?

Added subscribers: @MartijnBerger, @ThomasDinges

Added subscribers: @MartijnBerger, @ThomasDinges
Author

This is strange. Did some more tests:

In VM:

On physical machine:
7660218-win64: still crash
7660218-win32-vc12: works!

Narrowing down with 7660218-win64:

  • Removed all window layouts but "Default": still crash
  • Loaded factory settings: still crash
  • "Load UI" disabled: still crash

This is hard to catch because undo/redo has to be done several times until it crashes, so I never know when it's safe to say it "works". In addition, after restarting Blender, the same situation sometimes works and sometimes crashes.

Still investigating...

This is strange. Did some more tests: In VM: - Kubuntu: no crash - Win7/64: no crash. Tried 362b25b3, 7660218 (x64), 7660218 (x86, VC12) On physical machine: 7660218-win64: still crash 7660218-win32-vc12: works! Narrowing down with 7660218-win64: - Removed all window layouts but "Default": still crash - Loaded factory settings: still crash - "Load UI" disabled: still crash This is hard to catch because undo/redo has to be done several times until it crashes, so I never know when it's safe to say it "works". In addition, after restarting Blender, the same situation sometimes works and sometimes crashes. Still investigating...
Author

The "safest" situation should be:

  • Start Blender
  • Restore factory settings

Load UndoRedo.blend without UI

If I do this, it still crashes.

Though, it always works with c6d8540, and also with latest 32 bit build. "Always" means: Starting Blender four times, and each time doing undo/redo about 50 times.
:-/

Using Windbg, I can see that Undo causes an access violation. But without debug symbols, there's unfortunatelly nothing helpful I can provide now - can I?

....However: The 32 bit version that always works if started from Windows Explorer (double-click) also sometimes crashes if started via command line (current dir=blender dir).

Oh, sometimes the console says "error: not freed memory blocks: 180" (or other number) when quitting even though I performed the same steps as the previous time where it did not report any not freed memory blocks.

Sorry, this is too random to give more reliable information.

The "safest" situation should be: - Start Blender - Restore factory settings # Load UndoRedo.blend without UI If I do this, it still crashes. Though, it always works with c6d8540, and also with latest 32 bit build. "Always" means: Starting Blender four times, and each time doing undo/redo about 50 times. :-/ Using Windbg, I can see that Undo causes an access violation. But without debug symbols, there's unfortunatelly nothing helpful I can provide now - can I? ....However: The 32 bit version that always works if started from Windows Explorer (double-click) also sometimes crashes if started via command line (current dir=blender dir). Oh, sometimes the console says "error: not freed memory blocks: 180" (or other number) when quitting even though I performed the same steps as the previous time where it did not report any not freed memory blocks. Sorry, this is too random to give more reliable information.
Campbell Barton self-assigned this 2014-05-07 11:10:03 +02:00

I have a fix for this prepared. will commit soon (or send for review)

I have a fix for this prepared. will commit soon (or send for review)

Will commit workaround, but moving to TODO since a real fix is very involved.

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/UserInterface#Properties_Editor

Will commit workaround, but moving to TODO since a real fix is very involved. http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/UserInterface#Properties_Editor
Author

Oh, ok. Thanks a lot for looking into it anyway.

Oh, ok. Thanks a lot for looking into it anyway.

@willi-2, to be clear, the crash is fixed, just not in such a nice way.

@willi-2, to be clear, the crash is fixed, just not in such a nice way.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40046
No description provided.