Workaround T40046: Undo/redo crashes properties editor

Clear the path for now on undo